fix(minor): change unicode of arrow

--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "Urls": "http://localhost:5000",
   "ConnectionStrings": {
-    "WebApiDatabase": "Server=MOS;Database=AppDB;Trusted_Connection=True; TrustServerCertificate=True;"
+    "WebApiDatabase": "Server=tcp:my-web-serverdbserver.database.windows.net,1433;Initial Catalog=my-web-server_db;Persist Security Info=False;User ID=mosazghi;Password=Franki12;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Jwt": {
     "Issuer": "mosazghi.com",
