--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/base": "^5.0.0-beta.40",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-collapsible": "^2.10.0",
