--- a/client/package.json
+++ b/client/package.json
@@ -10,29 +10,26 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@emotion/react": "^11.11.4",
-        "@emotion/styled": "^11.11.5",
-        "@fontsource/roboto": "^5.0.13",
-        "@mui/base": "^5.0.0-beta.40",
-        "@mui/icons-material": "^5.15.20",
-        "@mui/material": "^5.15.20",
-        "react": "^18.2.0",
+        "@tailwindcss/vite": "^4.0.0-alpha.25",
+        "lucide-react": "^0.263.1",
+        "react": "^18.3.1",
         "react-collapsible": "^2.10.0",
-        "react-dom": "^18.2.0",
-        "universal-cookie": "^6.1.1"
+        "react-dom": "^18.3.1",
+        "tailwindcss": "^4.0.0-alpha.25",
+        "universal-cookie": "^6.1.3"
     },
     "devDependencies": {
-        "@types/react": "^18.2.15",
-        "@types/react-dom": "^18.2.7",
-        "@typescript-eslint/eslint-plugin": "^6.0.0",
-        "@typescript-eslint/parser": "^6.0.0",
-        "@vitejs/plugin-react": "^4.0.3",
-        "autoprefixer": "^10.4.16",
-        "eslint": "^8.45.0",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.3",
-        "react-router-dom": "^6.16.0",
-        "typescript": "^5.0.2",
-        "vite": "^4.4.5"
+        "@types/node": "^24.6.2",
+        "@types/react": "^18.3.25",
+        "@types/react-dom": "^18.3.7",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "@vitejs/plugin-react": "^4.7.0",
+        "eslint": "^8.57.1",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-react-refresh": "^0.4.23",
+        "react-router-dom": "^6.30.1",
+        "typescript": "^5.9.3",
+        "vite": "^5.4.11"
     }
 }
