--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,15 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.0.0-alpha.25",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@tailwindcss/vite": "^4.1.14",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "lucide-react": "^0.263.1",
         "react": "^18.3.1",
-        "react-collapsible": "^2.10.0",
         "react-dom": "^18.3.1",
-        "tailwindcss": "^4.0.0-alpha.25",
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss": "^4.1.14",
         "universal-cookie": "^6.1.3"
     },
     "devDependencies": {
@@ -29,6 +32,7 @@
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.23",
         "react-router-dom": "^6.30.1",
+        "tw-animate-css": "^1.4.0",
         "typescript": "^5.9.3",
         "vite": "^5.4.11"
     }
