--- a/client/package.json
+++ b/client/package.json
@@ -4,36 +4,33 @@
     "version": "1.0.0",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc && vite build",
-        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
+        "@radix-ui/react-popover": "^1.1.15",
         "@radix-ui/react-slot": "^1.2.3",
-        "@tailwindcss/vite": "^4.1.14",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "lucide-react": "^0.263.1",
+        "next": "^15.0.3",
+        "next-themes": "^0.4.6",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.14",
+        "tw-animate-css": "^1.4.0",
         "universal-cookie": "^6.1.3"
     },
     "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.17",
         "@types/node": "^24.6.2",
         "@types/react": "^18.3.25",
         "@types/react-dom": "^18.3.7",
-        "@typescript-eslint/eslint-plugin": "^6.21.0",
-        "@typescript-eslint/parser": "^6.21.0",
-        "@vitejs/plugin-react": "^4.7.0",
         "eslint": "^8.57.1",
-        "eslint-plugin-react-hooks": "^4.6.2",
-        "eslint-plugin-react-refresh": "^0.4.23",
-        "react-router-dom": "^6.30.1",
-        "tw-animate-css": "^1.4.0",
-        "typescript": "^5.9.3",
-        "vite": "^5.4.11"
+        "eslint-config-next": "^15.0.3",
+        "typescript": "^5.9.3"
     }
 }
