--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
         "react-dom": "^18.3.1",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.14",
+        "three": "^0.181.2",
         "tw-animate-css": "^1.4.0",
-        "universal-cookie": "^6.1.3"
+        "universal-cookie": "^6.1.3",
+        "vanta": "^0.5.24"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4.1.17",
