--- a/client/package.json
+++ b/client/package.json
@@ -12,26 +12,31 @@
     "dependencies": {
         "@radix-ui/react-popover": "^1.1.15",
         "@radix-ui/react-slot": "^1.2.3",
+        "@sanity/image-url": "^2.0.2",
+        "@sanity/vision": "^5.1.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "lucide-react": "^0.263.1",
-        "next": "^15.0.3",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
+        "lucide-react": "^0.562.0",
+        "next": "^16.1.1",
+        "next-sanity": "^12.0.5",
+        "react": "^19.2.3",
+        "react-dom": "^19.2.3",
+        "sanity": "^5.1.0",
+        "styled-components": "^6.1.19",
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.14",
-        "three": "^0.181.2",
+        "three": "^0.182.0",
         "tw-animate-css": "^1.4.0",
         "universal-cookie": "^6.1.3",
         "vanta": "^0.5.24"
     },
     "devDependencies": {
         "@tailwindcss/postcss": "^4.1.17",
-        "@types/node": "^24.6.2",
-        "@types/react": "^18.3.25",
-        "@types/react-dom": "^18.3.7",
-        "eslint": "^8.57.1",
-        "eslint-config-next": "^15.0.3",
+        "@types/node": "^25.0.3",
+        "@types/react": "^19.2.7",
+        "@types/react-dom": "^19.2.3",
+        "eslint": "^9.39.2",
+        "eslint-config-next": "^16.1.1",
         "typescript": "^5.9.3"
     }
 }
