--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,9 +1,8 @@
 {
     "rewrites": [
-        {
-            "source": "/(.*)",
-
-            "destination": "/"
-        }
+        { "source": "/studio/:path*", "destination": "/studio/:path*" },
+        { "source": "/_next/:path*", "destination": "/_next/:path*" },
+        { "source": "/api/:path*", "destination": "/api/:path*" },
+        { "source": "/(.*)", "destination": "/" }
     ]
 }
